Use Vault economy instead of solar credits