@@ -26,6 +26,7 @@
                     <argLine>
                         --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.config=ALL-UNNAMED
                         --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.handler=ALL-UNNAMED
+                        --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.handler.vault=ALL-UNNAMED
                         --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.misc=ALL-UNNAMED
                         --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp=ALL-UNNAMED</argLine>
                 </configuration>
@@ -129,6 +130,11 @@
             <groupId>gg.solarmc.placeholder</groupId>
             <artifactId>placeholderapi</artifactId>
             <version>2.10.10-DEV-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>gg.solarmc.vault</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7.1</version>
         </dependency>
     </dependencies>
 
